--- a/style.css
+++ b/style.css
@@ -41,3 +41,23 @@
 .login{
     margin-left: 20px;
 }
+
+.photo-grid-container{
+    display: flex;
+    justify-content: center;
+}
+
+.photo-grid {
+    width: 900px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.photo-grid-item {
+    display: flex;
+    justify-self: center;
+    border: 1px solid #fff;
+    width: 300px;
+    height: 300px;
+}
