--- a/style.css
+++ b/style.css
@@ -33,9 +33,8 @@
     justify-content: space-between;
 }
 
-.links{
-    display: flex;
-    justify-content: flex-end;
+.signup{
+    margin-left:auto;
 }
 
 .login{
@@ -54,10 +53,43 @@
     justify-content: center;
 }
 
+.social,
+.subscribe{
+    align-self: flex-end;
+    margin-bottom: 20px;
+}
+
+.first-item{
+    order: 1;
+}
+
+.last-item{
+    order: -1;
+}
+
 .photo-grid-item {
     display: flex;
     justify-self: center;
     border: 1px solid #fff;
     width: 300px;
     height: 300px;
+}
+
+.footer{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-item{
+    border: 1px solid#fff;
+    background-color: #D6E9FE;
+    height: 200px;
+    flex: 1;
+}
+
+.footer-one,
+.footer-three{
+    flex: initial;
+    background-color: #5995DA;
+    Width: 300px;
 }
